raffia/tests/error/scss/at-rule/use/with-missing-value.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but `)` received
  ┌─ with-missing-value.scss:1:22
  │
1 │ @use "other" with ($a);
  │                      ^


